--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+lib_deps = 
+	me-no-dev/ESPAsyncTCP@^1.2.2
+	me-no-dev/ESP Async WebServer@^1.2.3
