--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 lib_deps = 
 	me-no-dev/ESPAsyncTCP@^1.2.2
 	me-no-dev/ESP Async WebServer@^1.2.3
+	lorol/LittleFS_esp32@^1.0.6
+board_build.filesystem = littlefs
