--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
 	me-no-dev/ESP Async WebServer@^1.2.3
 	lorol/LittleFS_esp32@^1.0.6
 board_build.filesystem = littlefs
+
+upload_port = COM[4]
